--- a/04/ex00/Makefile
+++ b/04/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME = animal
 
-SRCS = main.cpp Animal.cpp Cat.cpp Dog.cpp
+SRCS = main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp WrongDog.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
