--- a/04/ex03/Makefile
+++ b/04/ex03/Makefile
@@ -1,12 +1,17 @@
 NAME = materia
 
-SRCS = main.cpp
+SRCS = main.cpp \
+	   AMateria.cpp \
+	   Ice.cpp \
+	   Cure.cpp \
+	   Character.cpp \
+	   MateriaSource.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address -g
 
 all: $(NAME)
 
